Jump fixes

--- a/less/chat.less
+++ b/less/chat.less
@@ -24,7 +24,6 @@
 		position: relative;
 		overflow: auto;
 		.stacklist-transition(@stacklist-time);
-		padding: 1rem 0 3rem;
 	}
 
 	.chat-line {
